fixed resource tracker spacing

--- a/client/src/styles/ResourceTracker.scss
+++ b/client/src/styles/ResourceTracker.scss
@@ -10,6 +10,7 @@
   border-bottom: colours.$light 4px solid;
   
   .resource-tracker-item {
+    margin: 0 25%;
     font-size: 1em;
     text-transform: uppercase;
 
